--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Restcountries App</title>
   <link rel="stylesheet" href="./css/styles.css">
+  <title>Restcountries App</title>
 </head>
 <body>
   <h1>Información sobre Países</h1>
-  <div id="countries-list"></div>
+  <div id="countries-list">
+<ul id="ul-list">
 
+</ul>
+</div>
+<div id="imageandcountry2"></div>
   <script src="./js/script.js"></script>
 </body>
 </html>
+
+
